--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                                                         (composed by
                                                         me) to Arjun
                                                         at the Ring
-                                                        Ceremony J <br />
+                                                        Ceremony <span class="icon-smile"></span> <br />
  
                                                         Who says stars are far away
                                                         You are the star who takes my breath away
@@ -228,14 +228,9 @@
 					<div class="col-md-6 col-sm-6">
 						
 						<div class="well">
-							<h3><i class="icon-heart"></i> Ceremony</h3>
-							<a href="#">Star Banquets</a>
-							<p>The High Street
-                                                        31st Cross Rd, Jayanagar 4 Block, Jaya Nagar East, Jayanagar
-                                                        Bangalore, Karnataka 560011
-							</p>
 							<hr>
-							<h3><i class="icon-star"></i> Reception</h3>
+							<h3><i
+                                                                class="icon-glass"></i> Reception Party</h3>
 							<a href="#">Star Banquets</a>
 							<p>The High Street
                                                         31st Cross Rd, Jayanagar 4 Block, Jaya Nagar East, Jayanagar
@@ -244,29 +239,28 @@
 						</div>
 					</div>
 					<div class="col-md-6 col-sm-6">
-						<div class="well">
-							 <h3><i class="icon-glass"></i> Wedding Party</h3>
-							<p>Sed justo dui, scelerisque ut consectetur vel, eleifend id erat. Morbi auctor adipiscing tempor. Phasellus rutrum aliquet.</p>
-							<img src="img/wedding.jpg" alt="" class="img-responsive"/>
-							<h5>Ring Bearer</h5>
-							<p>John Kanan</p>
-							<h5>Bridesmaids:</h5>
-							<p>Nulla facilisi. Sed justo dui, scelerisque ut consectetur vel, eleifend id erat. Morbi auctor adipiscing tempor. Phasellus condimentum rutrum aliquet.</p>
-							<h5>Groomsmen:</h5>
-							<p>Nulla facilisi. Sed justo dui, scelerisque ut consectetur vel, eleifend id erat. Morbi auctor adipiscing tempor. Phasellus condimentum rutrum aliquet.</p>
+					  <div class="well">
+					    <h3><i
+                                                    class="icon-hand-right"></i> Car Parking</h3>
+					    <p>Valet parking available.</p>
+					<!-- 		<img src="img/wedding.jpg" alt="" class="img-responsive"/> -->
+					<!-- 		<h5>Ring Bearer</h5> -->
+					<!-- 		<p>John Kanan</p> -->
+					<!-- 		<h5>Bridesmaids:</h5> -->
+					<!-- 		<p>Nulla facilisi. Sed justo dui, scelerisque ut consectetur vel, eleifend id erat. Morbi auctor adipiscing tempor. Phasellus condimentum rutrum aliquet.</p> -->
+					<!-- 		<h5>Groomsmen:</h5> -->
+					<!-- 		<p>Nulla facilisi. Sed justo dui, scelerisque ut consectetur vel, eleifend id erat. Morbi auctor adipiscing tempor. Phasellus condimentum rutrum aliquet.</p> -->
 						</div>
 					</div>
 
 				</div>
 				<a name="maps" id="maps"></a>
-                                <div class="map_container">
-                                  <div
-                                      class="map_canvas">
+                                <div class="Flexible-container">
                                     <iframe
                                         src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d243.04330559998758!2d77.58610450433729!3d12.927449580768762!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x6383db7e7190323f!2sStar+Banquetes!5e0!3m2!1sen!2sin!4v1407175933130"
-                                        width="800" height="450" frameborder="0"
+                                        width="425" height="350"
+                                        frameborder="0" scrolling="no" marginheight="0" marginwidth="0" 
                                         style="border:0"></iframe>
-                                  </div>
                                 </div>
 				<hr>
 			</div>
@@ -339,8 +333,12 @@
 								Copyright
                                                                 2014
                                                                 &copy;
-                                                                Powered
-                                                                by bootstrap
+                                                                Developed
+                                                                by Arjun
+                                                                with
+                                                                <span
+                                                                    class="icon-heart"></span>
+                                                                for nischita
 							</div>
 						</div>
 					</div>
