Hope to be last commit ;)

--- a/index.html
+++ b/index.html
@@ -63,11 +63,16 @@
             <div class="col-md-8 col-sm-7">
                 <div class="main-invite">
                     <div class="signal"><i class="icon-signal"></i> <span>Marriage On</span></div>
-                    <h1>We're<br>
-                        getting married</h1>
-
-                    <p>The sum which two married people owe to one another defies calculation. It is an infinite debt,
-                        which can only be discharged through all eternity.</p>
+                    <h1>We're <br/>
+                        getting married
+                    </h1>
+                    <p>
+                        We're taking the plunge! <br /> Hope you will be there to celebrate our flight,<br/>
+                                  As we get married on Monday, 29th September 2014.
+                    </p>
+                    <p><br/>Please join us at the reception lunch party.</p>
+                    <p id="main-invite-inner"><br/>"The sum which two married people owe to one another defies calculation. It is an infinite debt,
+                        which can only be discharged through all eternity."</p>
                 </div>
             </div>
             <div class="col-md-4 col-sm-5">
@@ -93,17 +98,27 @@
                     <h3>About Us</h3>
                 </div>
                 <div class="bor"></div>
-
-                <p class="about-para
-                                                          text-center">Imagine a couple whose
-                    physics is at its best. Say, wavelength and frequency that match,
-                    tastes are alike. Say, a place to visit or the kind of food to eat
-                    love and care for each other always quarrel that I top the list <span class="icon-smile"></span>
-                    parents see a daughter in their daughter-in-law and a son in their son-in-law
-                    names have a unique pattern: N-->A (girl) and A-->N (boy) J
-
-                    And you guessed it right, that's us: Nischita & Arjun!!!</p>
-
+                <p class="about-para text-left">
+                    Imagine a couple whose
+                </p>
+                <br/>
+                <p class="about-para text-left">
+                    Physics is at its best. Say, wavelength and frequency that match,
+                </p>
+                <p class="about-para text-left">
+                    Tastes are alike. Say, a place to visit or the kind of food to eat
+                </p>
+                <p class="about-para text-left">
+                    Love and care for each other always quarrel that I top the list <span class="icon-smile"></span>
+                </p>
+                <p class="about-para text-left">
+                    Parents see a daughter in their daughter-in-law and a son in their son-in-law
+                </p>
+                <p class="about-para text-left">
+                    Names have a unique pattern: N-->A (girl) and A-->N (boy) <span class="icon-smile"></span>
+                </p>
+                <br/>
+                <p class="about-para text-left"> And you guessed it right, that's us: Nischita & Arjun!</p>
                 <div class="bor"></div>
             </div>
         </div>
@@ -112,10 +127,10 @@
             <div class="col-md-4
                                                     col-sm-4">
                 <div class="bride">
-                    <h3>Nischita</h3>
+                    <h3>Nischita Says</h3>
                     <hr>
-                    <p
-                            class="text-center">Arjun
+                    <p class="text-left">
+                        Arjun
                         is the best
                         give I could
                         ever get in my
@@ -135,21 +150,34 @@
                         me) to Arjun
                         at the Ring
                         Ceremony <span class="icon-smile"></span> <br/>
-
-                        Who says stars are far away
+                    </p>
+                    <br/>
+                    <p class="text-left">
+                        "Who says stars are far away
+                    <br/>
                         You are the star who takes my breath away
-
+                    </p>
+                    <br/>
+                    <p class="text-left">
                         Roses are red and violets are blue
                         You are my answer and not just a clue
-
+                    </p>
+                    <br/>
+                    <p class="text-left">
                         Sunrise and sunset, Red Label and Bru
                         You are my most wonderful dream come true
-
+                    </p>
+                    <br/>
+                    <p class="text-left">
                         Balloons of love, making their way stair by stair
                         I am pretty sure we make a perfect pair
-
+                    </p>
+                    <br/>
+                    <p class="text-left">
                         Wish you all the best in everything you do
-                        I am here for life to stay with you</p>
+                        I am here for life to stay with you
+                        <span class="icon-smile"></span>"
+                    </p>
                 </div>
             </div>
             <div class="col-md-4 col-sm-4">
@@ -159,12 +187,12 @@
             </div>
             <div class="col-md-4 col-sm-4">
                 <div class="groom">
-                    <h3>Arjun</h3>
+                    <h3>Arjun says</h3>
                     <hr>
                     <p
                             class="text-center">My
                         Love for
-                        nischita is
+                        Nischita is
                         more than that
                         for cars,
                         bikes,
@@ -195,16 +223,13 @@
                 <div class="flexslider">
                     <ul class="slides">
                         <li>
-                            <img src="img/1.jpg" alt="" class="img-responsive"/>
+                            <img src="img/arjun1.jpg" alt="" class="img-responsive"/>
                         </li>
+                        <!--<li>-->
+                            <!--<img src="img/arjun2.jpg" alt="" class="img-responsive"/>-->
+                        <!--</li>-->
                         <li>
-                            <img src="img/2.jpg" alt="" class="img-responsive"/>
-                        </li>
-                        <li>
-                            <img src="img/3.jpg" alt="" class="img-responsive"/>
-                        </li>
-                        <li>
-                            <img src="img/4.jpg" alt="" class="img-responsive"/>
+                            <img src="img/arjun3.jpg" alt="" class="img-responsive"/>
                         </li>
                     </ul>
                 </div>
@@ -234,16 +259,19 @@
                     <hr>
                     <h3><i
                             class="icon-glass"></i> Reception Party</h3>
-                    <a href="#">Star Banquets</a>
+                    <a href="#">Star Banquetes</a>
 
-                    <p>The High Street
-                        31st Cross Rd, Jayanagar 4 Block, Jaya Nagar East, Jayanagar
-                        Bangalore, Karnataka 560011
+                    <p>"The High Street"
+                        #62, 3rd Floor, 11th Main Road,
+                        Jayanagar 4th Block,
+                        Bengaluru,
+                        Karnataka 560011.
+                        Ph: 080 26539999
                     </p>
                     <hr>
                     <h3>
-                    <i
-                            class="icon-time"></i> Timings</h3>
+                        <i
+                                class="icon-time"></i> Timings</h3>
                     <dl class="dl-horizontal">
                         <dt>Reception</dt>
                         <dd>12:30 P.M onwards</dd>
@@ -260,14 +288,14 @@
                     <h3><i
                             class="icon-hand-right"></i> Car Parking</h3>
 
-                    <p>Valet parking available.</p>
+                    <p>Valet parking available</p>
                 </div>
             </div>
             <div class="col-md-6 col-sm-6">
                 <div class="well">
-                <h3><i
-                        class="icon-gift"></i> Gifts/Bouquets</h3>
-                <p>No Gifts/Bouquets please, just the pleasure of your company is gift enough</p>
+                    <h3><i
+                            class="icon-warning-sign"></i>Statutory Warning</h3>
+                    <p>Only people allowed, strictly no gifts/bouquets <span class="icon-smile"></span></p>
                 </div>
             </div>
         </div>
@@ -313,7 +341,7 @@
                     with
                                                                 <span
                                                                         class="icon-heart"></span>
-                    for nischita
+                    for Nischita
                 </div>
             </div>
         </div>
