--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
                     Copyright
                     2014
                     &copy;
-                    Developed and support
+                    Development and support
                     by Arjun
                     with
                                                                 <span
