--- a/index.html
+++ b/index.html
@@ -336,12 +336,12 @@
                     Copyright
                     2014
                     &copy;
-                    Development and support
+                    Developed and support provided by
                     by Arjun
                     with
                                                                 <span
                                                                         class="icon-heart"></span>
-                    for Nischita (of course content by her)
+                    for Nischita (of course content provided by her)
                 </div>
             </div>
         </div>
