--- a/index.html
+++ b/index.html
@@ -342,6 +342,9 @@
                                                                 <span
                                                                         class="icon-heart"></span>
                     for Nischita (of course content provided by her)
+                    <img
+                        src="http://www.easycounter.com/counter.php?arjunasuresh3"
+                        border="0" alt="Hit Counter">
                 </div>
             </div>
         </div>
