--- a/index.html
+++ b/index.html
@@ -66,12 +66,16 @@
                     <h1>We're <br/>
                         getting married
                     </h1>
+
                     <p>
-                        We're taking the plunge! <br /> Hope you will be there to celebrate our flight,<br/>
-                                  As we get married on Monday, 29th September 2014.
+                        We're taking the plunge! <br/> Hope you will be there to celebrate our flight,<br/>
+                        As we get married on Monday, 29th September 2014.
                     </p>
+
                     <p><br/>Please join us at the reception lunch party.</p>
-                    <p id="main-invite-inner"><br/>"The sum which two married people owe to one another defies calculation. It is an infinite debt,
+
+                    <p id="main-invite-inner"><br/>"The sum which two married people owe to one another defies
+                        calculation. It is an infinite debt,
                         which can only be discharged through all eternity."</p>
                 </div>
             </div>
@@ -102,23 +106,30 @@
                     Imagine a couple whose
                 </p>
                 <br/>
+
                 <p class="about-para text-left">
                     Physics is at its best. Say, wavelength and frequency that match,
                 </p>
+
                 <p class="about-para text-left">
                     Tastes are alike. Say, a place to visit or the kind of food to eat
                 </p>
+
                 <p class="about-para text-left">
                     Love and care for each other always quarrel that I top the list <span class="icon-smile"></span>
                 </p>
+
                 <p class="about-para text-left">
                     Parents see a daughter in their daughter-in-law and a son in their son-in-law
                 </p>
+
                 <p class="about-para text-left">
                     Names have a unique pattern: N-->A (girl) and A-->N (boy) <span class="icon-smile"></span>
                 </p>
                 <br/>
+
                 <p class="about-para text-left"> And you guessed it right, that's us: Nischita & Arjun!</p>
+
                 <div class="bor"></div>
             </div>
         </div>
@@ -152,27 +163,32 @@
                         Ceremony <span class="icon-smile"></span> <br/>
                     </p>
                     <br/>
+
                     <p class="text-left">
                         "Who says stars are far away
-                    <br/>
+                        <br/>
                         You are the star who takes my breath away
                     </p>
                     <br/>
+
                     <p class="text-left">
                         Roses are red and violets are blue
                         You are my answer and not just a clue
                     </p>
                     <br/>
+
                     <p class="text-left">
                         Sunrise and sunset, Red Label and Bru
                         You are my most wonderful dream come true
                     </p>
                     <br/>
+
                     <p class="text-left">
                         Balloons of love, making their way stair by stair
                         I am pretty sure we make a perfect pair
                     </p>
                     <br/>
+
                     <p class="text-left">
                         Wish you all the best in everything you do
                         I am here for life to stay with you
@@ -225,9 +241,6 @@
                         <li>
                             <img src="img/arjun1.jpg" alt="" class="img-responsive"/>
                         </li>
-                        <!--<li>-->
-                            <!--<img src="img/arjun2.jpg" alt="" class="img-responsive"/>-->
-                        <!--</li>-->
                         <li>
                             <img src="img/arjun3.jpg" alt="" class="img-responsive"/>
                         </li>
@@ -293,8 +306,9 @@
             </div>
             <div class="col-md-6 col-sm-6">
                 <div class="well">
-                    <h3><i
-                            class="icon-warning-sign"></i>Statutory Warning</h3>
+                    <h3>
+                        <i class="icon-warning-sign"></i>Statutory Warning
+                    </h3>
                     <p>Only people allowed, strictly no gifts/bouquets <span class="icon-smile"></span></p>
                 </div>
             </div>
@@ -336,15 +350,9 @@
                     Copyright
                     2014
                     &copy;
-                    Developed and support provided by
-                    by Arjun
-                    with
-                                                                <span
-                                                                        class="icon-heart"></span>
-                    for Nischita (of course content provided by her)
-                    <img
-                        src="http://www.easycounter.com/counter.php?arjunasuresh3"
-                        border="0" alt="Hit Counter">
+                    Developed and support provided by Arjun with <span class="icon-heart"></span>
+                    for Nischita (of course content provided by her <span class="icon-smile"></span>)
+                    <img src="http://www.easycounter.com/counter.php?arjunasuresh3" border="0" alt="Hit Counter">
                 </div>
             </div>
         </div>
