updated title and seo keywords

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
     <!-- Title here -->
-    <title>Wedding</title>
+    <title>Wedding Invitation</title>
     <!-- Description, Keywords and Author -->
-    <meta name="description" content="Your description">
-    <meta name="keywords" content="Your,Keywords">
-    <meta name="author" content="ResponsiveWebInc">
+    <meta name="description" content="Arjun and nischit's wedding invitation">
+    <meta name="keywords" content="arjun,nischita,wedding, wedding invitation">
+    <meta name="author" content="Arjun">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
@@ -377,4 +377,5 @@
 <!-- Custom JS -->
 <script src="js/custom.js"></script>
 </body>
+
 </html>
